JVM Argument level fix for Spark with Java 17 compatibility issue. Reference: https://stackoverflow.com/questions/73465937/apache-spark-3-3-0-breaks-on-java-17-with-cannot-access-class-sun-nio-ch-direct